--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": []
           },
