--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
-              "./node_modules/@ng-select/ng-select/themes/default.theme.css"
+              "./node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "./node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": []
           },
